Fix overflow on projects tablet

--- a/assets/_globals.scss
+++ b/assets/_globals.scss
@@ -116,7 +116,6 @@ span {
 }
 
 @mixin sectionTablet {
-  overflow-y: hidden;
   position: relative;
   width: 70%;
   left: 30%;
